--- a/HomeAutomationServer/platformio.ini
+++ b/HomeAutomationServer/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps = ArduinoOTA
+lib_deps = 
+	ArduinoOTA
+	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
+	contrem/arduino-timer@^2.3.0
 upload_protocol = espota
 upload_port = 192.168.0.163
