Implemented simple example-client

--- a/HomeAutomationClient/platformio.ini
+++ b/HomeAutomationClient/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps = ArduinoOTA
+lib_deps = 
+	ArduinoOTA
+	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
+	bblanchon/ArduinoJson@^6.17.3
 upload_protocol = espota
 upload_port = 192.168.0.94
